(WIP) Show html5 outline

--- a/styles/html-outliner.less
+++ b/styles/html-outliner.less
@@ -5,6 +5,18 @@
 
 @import "ui-variables";
 
-.html-outliner {
-
+.outliner-view {
+    header {
+        margin: 0 auto 10px;
+        padding: 0 0 5px;
+        border-bottom: 1px solid @button-background-color;
+        text-align: center;
+    }
+    .btn-toolbar {
+        text-align: center;
+        .btn-group {
+            float: none;
+            margin: 0 auto;
+        }
+    }
 }
