Fix commons styles

--- a/styles/html-outliner.less
+++ b/styles/html-outliner.less
@@ -27,8 +27,10 @@ atom-panel-container.modal atom-panel.modal .select-list.outliner-view {
         margin: 0 auto 15px;
         li {
             display: inline-block;
+            width: 50%;
             height: auto;
             line-height: 1;
+            text-align: center;
         }
     }
     .error-message, .loading {
